--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
+    "create-react-app": "^3.4.1",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -20,8 +21,11 @@
   "devDependencies": {
     "nodemon": "^2.0.4"
   },
-  "scripts": { 
-    "start": "node server.js", 
-    "server": "nodemon server.js"
+  "scripts": {
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client-install": "yarn add --prefix client",
+    "client": "yarn start --prefix client",
+    "dev": "concurrently \"yarn run server\" \"yarn run client\""
   }
 }
